extends Control

@onready var score_label = $Score
@onready var next_button = $NextLevel
@onready var clear_sound = $clear_sound
@onready var audio_click = $AudioClick # üéµ ‡∏≠‡πâ‡∏≤‡∏á‡∏≠‡∏¥‡∏á‡πÇ‡∏´‡∏ô‡∏î‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏õ‡∏∏‡πà‡∏°

func _ready():
	# ‡πÅ‡∏™‡∏î‡∏á‡∏Ñ‡∏∞‡πÅ‡∏ô‡∏ô
	score_label.text = "Score: " + str(GameDatabase.total_score)

	# ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏ä‡∏ô‡∏∞
	if clear_sound and clear_sound.stream:
		clear_sound.play()

	# ‡πÄ‡∏ä‡∏∑‡πà‡∏≠‡∏°‡∏õ‡∏∏‡πà‡∏°‡πÑ‡∏õ‡∏î‡πà‡∏≤‡∏ô‡∏ñ‡∏±‡∏î‡πÑ‡∏õ
	if not next_button.pressed.is_connected(_on_next_pressed):
		next_button.pressed.connect(_on_next_pressed)


func _on_next_pressed():
	# üîä ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏Å‡∏î‡∏õ‡∏∏‡πà‡∏° ‡πÅ‡∏•‡∏∞‡∏£‡∏≠‡πÅ‡∏õ‡πä‡∏ö‡∏ô‡∏∂‡∏á‡∏Å‡πà‡∏≠‡∏ô‡πÄ‡∏õ‡∏•‡∏µ‡πà‡∏¢‡∏ô‡∏´‡∏ô‡πâ‡∏≤
	if audio_click:
		audio_click.play()
		await get_tree().create_timer(0.2).timeout

	# üü¢ 1. ‡∏£‡∏µ‡πÄ‡∏ã‡πá‡∏ï‡∏ï‡∏≥‡πÅ‡∏´‡∏ô‡πà‡∏á ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡πÉ‡∏´‡πâ‡πÑ‡∏õ‡πÄ‡∏Å‡∏¥‡∏î‡∏ó‡∏µ‡πà Spawn Point ‡∏Ç‡∏≠‡∏á‡∏î‡πà‡∏≤‡∏ô‡πÉ‡∏´‡∏°‡πà
	GameDatabase.player_last_position = Vector2.ZERO
	GameDatabase.last_world_path = "" 
	
	# üü¢ 2. ‡πÄ‡∏û‡∏¥‡πà‡∏° Index ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡πÑ‡∏õ‡∏î‡πà‡∏≤‡∏ô‡∏ï‡πà‡∏≠‡πÑ‡∏õ
	GameDatabase.current_level_index += 1
	
	# üü¢ 3. ‡πÄ‡∏ä‡πá‡∏Ñ‡∏ß‡πà‡∏≤‡∏°‡∏µ‡∏î‡πà‡∏≤‡∏ô‡∏ï‡πà‡∏≠‡πÑ‡∏õ‡πÑ‡∏´‡∏°
	if GameDatabase.current_level_index < GameDatabase.levels.size():
		var next_level = GameDatabase.levels[GameDatabase.current_level_index]
		get_tree().change_scene_to_file(next_level)
	else:
		# üèÜ ‡∏ñ‡πâ‡∏≤‡∏à‡∏ö‡∏î‡πà‡∏≤‡∏ô‡∏™‡∏∏‡∏î‡∏ó‡πâ‡∏≤‡∏¢‡πÅ‡∏•‡πâ‡∏ß (world9) ‡πÉ‡∏´‡πâ‡πÑ‡∏õ‡∏ó‡∏µ‡πà‡∏´‡∏ô‡πâ‡∏≤ win_ui
		var win_scene_path = "res://scene/win_ui.tscn"
		
		# ‡πÄ‡∏ä‡πá‡∏Ñ‡∏Å‡πà‡∏≠‡∏ô‡∏ß‡πà‡∏≤‡∏°‡∏µ‡πÑ‡∏ü‡∏•‡πå‡∏´‡∏ô‡πâ‡∏≤ win_ui ‡∏à‡∏£‡∏¥‡∏á‡πÑ‡∏´‡∏° ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡∏õ‡πâ‡∏≠‡∏á‡∏Å‡∏±‡∏ô‡πÄ‡∏Å‡∏°‡∏Ñ‡πâ‡∏≤‡∏á
		if ResourceLoader.exists(win_scene_path):
			get_tree().change_scene_to_file(win_scene_path)
		else:
			# ‡∏ñ‡πâ‡∏≤‡∏´‡∏≤‡πÑ‡∏ü‡∏•‡πå‡πÑ‡∏°‡πà‡πÄ‡∏à‡∏≠ ‡πÉ‡∏´‡πâ‡∏Å‡∏•‡∏±‡∏ö‡πÄ‡∏°‡∏ô‡∏π‡∏´‡∏•‡∏±‡∏Å‡πÄ‡∏õ‡πá‡∏ô‡∏ó‡∏≤‡∏á‡πÄ‡∏•‡∏∑‡∏≠‡∏Å‡∏™‡∏≥‡∏£‡∏≠‡∏á
			print("Error: ‡πÑ‡∏°‡πà‡∏û‡∏ö‡πÑ‡∏ü‡∏•‡πå win_ui.tscn ‡∏Å‡∏≥‡∏•‡∏±‡∏á‡∏Å‡∏•‡∏±‡∏ö‡∏´‡∏ô‡πâ‡∏≤‡πÄ‡∏°‡∏ô‡∏π‡∏´‡∏•‡∏±‡∏Å...")
			get_tree().change_scene_to_file("res://scene/main_menu.tscn")
